--- a/Book.DataAccess/ProjectMVC.DataAccess.csproj
+++ b/Book.DataAccess/ProjectMVC.DataAccess.csproj
@@ -1,8 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>aspnet-ProjectMVC-FFAA5514-451E-4551-B7D6-0D63FA98FDCC</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,17 +12,15 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Book.DataAccess\ProjectMVC.DataAccess.csproj" />
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Book.Models\ProjectMVC.Models.csproj" />
     <ProjectReference Include="..\Book.Utility\ProjectMVC.Utility.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
   </ItemGroup>
 
 </Project>
