creating category model and adding to db

--- a/ProjectMVC/appsettings.json
+++ b/ProjectMVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProjectMVC-FFAA5514-451E-4551-B7D6-0D63FA98FDCC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-SUA6MPK;Database=ProjectMVC;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
